<resources>
    <string name="app_name">AITextDungeon</string>
    <string name="add_new_item">Add New Item</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="inventory">Inventory</string>
    <string name="nav_name">Name</string>
    <string name="nav_icon">Icon</string>
    <string name="nav_properties">Properties</string>
    <string name="nav_category">Categories</string>
    <string name="next">Next</string>
    <string name="enter_item_name_hint">Enter item name</string>
    <string name="new_item">New Item</string>
    <string name="name">Name</string>
    <string name="list_of_items">List of Items</string>
    <string name="selected_icon">Selected Icon</string>
    <string name="property_header_name">Name</string>
    <string name="property_header_value">Value</string>
    <string name="property_name_hint">Enter name</string>
    <string name="property_value_hint">Enter value</string>
    <string name="enter_new_category_hint">Enter New Category Name</string>
    <string name="create">Create World</string>
    <string name="item_icon">item icon</string>
    <string name="assign_category">Assign Category</string>
    <string name="set_properties">Set Properties</string>
    <string name="ai_text_dungeon">AI Text Dungeon</string>
    <string name="load">Load World</string>
    <string name="your_adventures">Your Adventures</string>
</resources>