<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:text="@string/new_item"
        android:textColor="@color/primaryColor"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/assign_category"
        android:textColor="@color/primaryColor"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:spinnerMode="dropdown"
        style="@style/CustomSpinnerStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/newCategoryEditText"
        style="@style/EditTextStyle"
        android:background="@drawable/edit_text_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_category_hint"
        android:inputType="text"
        android:maxLength="20"
        android:visibility="gone"
        android:padding="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/nextButton"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/next"
        android:enabled="false" />
</LinearLayout>
