<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:orientation="vertical">

    <!-- Header Title -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/new_item"
        android:textColor="@color/primaryColor"
        android:textSize="32sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15" />

    <EditText
        android:id="@+id/itemNameEditText"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/enter_item_name_hint"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:maxLength="30"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@drawable/edit_text_underline" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70" />

    <Button
        android:id="@+id/nextButton"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="16dp"
        android:text="@string/next" />

</LinearLayout>
